# rmsafe

./: Cargo.toml  NOTES  README.md  bash_completions  duplicate  setup.sh  todo
.cargo/: config.toml
setup/: setup.sh
src/: datetime.rs  lib.rs  main.rs  misc_util.rs  remove_util.rs  trashcan_config.rs
