[package]
name = "rmsafe"
version = "2.4.2"
edition = "2021"
description = "safely removing files and directories; moving them to trash"
license = "MIT"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
love_rust = "0.3.0"
clap = { version = "4.0.26", features = ["derive"] }
confy = "0.5.1"
chrono = "0.4.23"
glob = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
toml = "0.7.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
