cargo-features = ["codegen-backend"]
[package]
name = "rmsafe"
version = "2.5.0"
edition = "2021"
description = "safely removing files and directories; moving them to trash"
license = "MIT"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]
repository = "https://github.com/frroossst/rmsafe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

