cargo-features = ["codegen-backend"]
[package]
name = "rmsafe"
version = "3.1.3"
edition = "2021"
description = "safely removing files and directories; moving them to trash"
license = "MIT"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]
repository = "https://github.com/frroossst/rmsafe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rms"
path = "src/main.rs"

[package.metadata.os]
required = ["linux"]

[dependencies]

[profile.dev]
debug = 0
opt-level = 0
codegen-backend = "cranelift"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
